; ModuleID = '/home/carl/AnghaBench/Atlas/src/extr_chassis-mainloop.c_chassis_set_shutdown_location.c'
source_filename = "/home/carl/AnghaBench/Atlas/src/extr_chassis-mainloop.c_chassis_set_shutdown_location.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@signal_shutdown = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"Initiating shutdown, requested from %s\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"signal handler\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @chassis_set_shutdown_location(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @signal_shutdown, align 4
  %4 = icmp eq i32 %3, 0
  br i1 %4, label %5, label %14

5:                                                ; preds = %1
  %6 = load i8*, i8** %2, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %5
  %9 = load i8*, i8** %2, align 8
  br label %11

10:                                               ; preds = %5
  br label %11

11:                                               ; preds = %10, %8
  %12 = phi i8* [ %9, %8 ], [ getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), %10 ]
  %13 = call i32 @g_message(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i8* %12)
  br label %14

14:                                               ; preds = %11, %1
  store i32 1, i32* @signal_shutdown, align 4
  ret void
}

declare dso_local i32 @g_message(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
